@@ -47,6 +47,11 @@
 #define ACE_LACKS_NATIVE_STRPTIME
 #define ACE_HAS_STRERROR
 #define ACE_HAS_STRPTIME
+#define ACE_LACKS_POLL_H
+#define ACE_LACKS_REGEX_H
+#define ACE_LACKS_SYS_MSG_H
+#define ACE_LACKS_PWD_H
+#define ACE_LACKS_SEMAPHORE_H
 #define ACE_LACKS_DIRENT_H
 #define ACE_LACKS_UCONTEXT_H
 #define ACE_LACKS_SYS_SELECT_H
